// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateRange should allow using the local timezone 1`] = `
<div>
  <div
    className="DatePicker__From"
  >
    <span>
      From:
       
    </span>
    <Connect(DatePicker)
      onChange={[Function]}
      useTimezone={true}
      value={0}
    />
  </div>
  <div
    className="DatePicker__To"
  >
    <span>
       
      To:
       
    </span>
    <Connect(DatePicker)
      endOfDay={true}
      onChange={[Function]}
      useTimezone={true}
      value={1}
    />
  </div>
</div>
`;

exports[`DateRange should render the component 1`] = `
<div>
  <div
    className="DatePicker__From"
  >
    <span>
      From:
       
    </span>
    <Connect(DatePicker)
      onChange={[Function]}
      useTimezone={false}
      value={0}
    />
  </div>
  <div
    className="DatePicker__To"
  >
    <span>
       
      To:
       
    </span>
    <Connect(DatePicker)
      endOfDay={true}
      onChange={[Function]}
      useTimezone={false}
      value={1}
    />
  </div>
</div>
`;
